Import of TEEJAY/Calendar-Model-0.04 from CPAN.
gitpan-cpan-distribution: Calendar-Model
gitpan-cpan-version:      0.04
gitpan-cpan-path:         TEEJAY/Calendar-Model-0.04.tar.gz
gitpan-cpan-author:       TEEJAY
gitpan-cpan-maturity:     released

--- a/examples/templates/calendar.tt
+++ b/examples/templates/calendar.tt
@@ -42,7 +42,7 @@
         <div class="month_header row-fluid calendar_header">
           <div class="span3">&nbsp;</div>
           [% FOREACH column IN cal.columns() %]
-          <div class="span1">[% column.ucfirst %]</div>
+          <div class="span1">[% column %]</div>
           [% END %]
           <div class="span2">&nbsp;</div>
         </div>
